[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/Button.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/FadeIn.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/TitleScreen.gd" type="Script" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Utils/PressStart2P.ttf"

[sub_resource type="DynamicFont" id=2]
size = 6
font_data = SubResource( 1 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 50.0
margin_top = 15.0
margin_right = 260.0
margin_bottom = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 210.0

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 4.0
margin_right = 210.0
margin_bottom = 72.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 210.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8
alignment = 1

[node name="NewGame" parent="Menu/CenterRow/Buttons" instance=ExtResource( 1 )]
margin_bottom = 30.0
scene_to_load = "res://MainScene.tscn"

[node name="Label" parent="Menu/CenterRow/Buttons/NewGame" index="0"]
text = "New Game"

[node name="Quit" parent="Menu/CenterRow/Buttons" instance=ExtResource( 1 )]
margin_top = 38.0
margin_bottom = 68.0
scene_to_load = "res://UI/Pause.tscn"

[node name="Label" parent="Menu/CenterRow/Buttons/Quit" index="0"]
text = "Quit"

[node name="VersionLabel" type="Label" parent="Menu"]
margin_top = 76.0
margin_right = 210.0
margin_bottom = 135.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Version 0.9999999
PumpkinBox Studios"

[node name="FadeIn" parent="." instance=ExtResource( 2 )]
visible = false
[connection signal="pressed" from="Menu/CenterRow/Buttons/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]

[editable path="Menu/CenterRow/Buttons/NewGame"]

[editable path="Menu/CenterRow/Buttons/Quit"]
